--- a/gomoku.ui
+++ b/gomoku.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1020</width>
+    <width>1102</width>
     <height>714</height>
    </rect>
   </property>
@@ -16,7 +16,7 @@
   <widget class="QPushButton" name="pushButton_ready">
    <property name="geometry">
     <rect>
-     <x>720</x>
+     <x>820</x>
      <y>560</y>
      <width>254</width>
      <height>21</height>
@@ -29,7 +29,7 @@
   <widget class="QTextBrowser" name="textBrowser_log">
    <property name="geometry">
     <rect>
-     <x>720</x>
+     <x>820</x>
      <y>20</y>
      <width>256</width>
      <height>471</height>
@@ -39,7 +39,7 @@
   <widget class="QLineEdit" name="lineEdit_addr">
    <property name="geometry">
     <rect>
-     <x>720</x>
+     <x>820</x>
      <y>500</y>
      <width>170</width>
      <height>23</height>
@@ -58,7 +58,7 @@
   <widget class="QPushButton" name="pushButton_connect">
    <property name="geometry">
     <rect>
-     <x>903</x>
+     <x>1003</x>
      <y>501</y>
      <width>71</width>
      <height>51</height>
@@ -71,7 +71,7 @@
   <widget class="QLineEdit" name="lineEdit_port">
    <property name="geometry">
     <rect>
-     <x>720</x>
+     <x>820</x>
      <y>530</y>
      <width>170</width>
      <height>23</height>
@@ -90,7 +90,7 @@
   <widget class="QPushButton" name="pushButton_put">
    <property name="geometry">
     <rect>
-     <x>903</x>
+     <x>1003</x>
      <y>650</y>
      <width>71</width>
      <height>51</height>
@@ -103,7 +103,7 @@
   <widget class="QLineEdit" name="lineEdit_y">
    <property name="geometry">
     <rect>
-     <x>720</x>
+     <x>820</x>
      <y>680</y>
      <width>170</width>
      <height>23</height>
@@ -122,7 +122,7 @@
   <widget class="QLineEdit" name="lineEdit_x">
    <property name="geometry">
     <rect>
-     <x>720</x>
+     <x>820</x>
      <y>650</y>
      <width>170</width>
      <height>23</height>
@@ -141,7 +141,7 @@
   <widget class="QPushButton" name="pushButton_play">
    <property name="geometry">
     <rect>
-     <x>720</x>
+     <x>820</x>
      <y>620</y>
      <width>254</width>
      <height>21</height>
@@ -170,7 +170,7 @@
   <widget class="QRadioButton" name="radioButton_black">
    <property name="geometry">
     <rect>
-     <x>830</x>
+     <x>940</x>
      <y>590</y>
      <width>61</width>
      <height>21</height>
@@ -183,7 +183,7 @@
   <widget class="QRadioButton" name="radioButton_white">
    <property name="geometry">
     <rect>
-     <x>910</x>
+     <x>1010</x>
      <y>590</y>
      <width>61</width>
      <height>21</height>
@@ -193,12 +193,15 @@
     <string>White</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_color">
+  <widget class="QLabel" name="label_color_1">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>720</x>
+     <x>820</x>
      <y>590</y>
-     <width>91</width>
+     <width>111</width>
      <height>21</height>
     </rect>
    </property>
@@ -209,7 +212,7 @@
   <widget class="QLabel" name="label_y">
    <property name="geometry">
     <rect>
-     <x>690</x>
+     <x>672</x>
      <y>325</y>
      <width>31</width>
      <height>31</height>
@@ -878,6 +881,263 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
+  <widget class="QLabel" name="label_color">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>693</x>
+     <y>110</y>
+     <width>100</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Turn Color</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_black">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>723</x>
+     <y>140</y>
+     <width>40</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="resource/resource.qrc">:/icon/black.png</pixmap>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_white">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>723</x>
+     <y>140</y>
+     <width>40</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="resource/resource.qrc">:/icon/white.png</pixmap>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_green">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>733</x>
+     <y>150</y>
+     <width>20</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="resource/resource.qrc">:/icon/greendot.png</pixmap>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_black_your">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>723</x>
+     <y>230</y>
+     <width>40</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="resource/resource.qrc">:/icon/black.png</pixmap>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_white_your">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>723</x>
+     <y>230</y>
+     <width>40</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="resource/resource.qrc">:/icon/white.png</pixmap>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_color_your">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>693</x>
+     <y>200</y>
+     <width>100</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>My Color</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_timer">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>693</x>
+     <y>20</y>
+     <width>100</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Timer</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_time">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>693</x>
+     <y>50</y>
+     <width>100</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>26</pointsize>
+    </font>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>15</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <zorder>pushButton_ready</zorder>
+  <zorder>textBrowser_log</zorder>
+  <zorder>lineEdit_addr</zorder>
+  <zorder>pushButton_connect</zorder>
+  <zorder>lineEdit_port</zorder>
+  <zorder>pushButton_put</zorder>
+  <zorder>lineEdit_y</zorder>
+  <zorder>lineEdit_x</zorder>
+  <zorder>pushButton_play</zorder>
+  <zorder>label_bg</zorder>
+  <zorder>radioButton_black</zorder>
+  <zorder>radioButton_white</zorder>
+  <zorder>label_color_1</zorder>
+  <zorder>label_y</zorder>
+  <zorder>label_x</zorder>
+  <zorder>label_1</zorder>
+  <zorder>label_2</zorder>
+  <zorder>label_3</zorder>
+  <zorder>label_4</zorder>
+  <zorder>label_5</zorder>
+  <zorder>label_6</zorder>
+  <zorder>label_10</zorder>
+  <zorder>label_11</zorder>
+  <zorder>label_12</zorder>
+  <zorder>label_13</zorder>
+  <zorder>label_14</zorder>
+  <zorder>label_15</zorder>
+  <zorder>label_16</zorder>
+  <zorder>label_17</zorder>
+  <zorder>label_18</zorder>
+  <zorder>label_19</zorder>
+  <zorder>label_20</zorder>
+  <zorder>label_21</zorder>
+  <zorder>label_22</zorder>
+  <zorder>label_23</zorder>
+  <zorder>label_24</zorder>
+  <zorder>label_25</zorder>
+  <zorder>label_26</zorder>
+  <zorder>label_27</zorder>
+  <zorder>label_28</zorder>
+  <zorder>label_29</zorder>
+  <zorder>label_30</zorder>
+  <zorder>label_31</zorder>
+  <zorder>label_32</zorder>
+  <zorder>label_33</zorder>
+  <zorder>label_color</zorder>
+  <zorder>label_white</zorder>
+  <zorder>label_black</zorder>
+  <zorder>label_green</zorder>
+  <zorder>label_black_your</zorder>
+  <zorder>label_white_2</zorder>
+  <zorder>label_color_your</zorder>
+  <zorder>label_timer</zorder>
+  <zorder>label_time</zorder>
  </widget>
  <tabstops>
   <tabstop>textBrowser_log</tabstop>
@@ -894,6 +1154,7 @@
  </tabstops>
  <resources>
   <include location="resource/resource.qrc"/>
+  <include location="../../.designer/backup/resource/resource.qrc"/>
  </resources>
  <connections/>
 </ui>
